--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   cloud_firestore: ^4.4.3
   firebase_storage: ^11.0.14
 
+  rating_dialog: ^2.0.4
+  provider: ^6.0.5
+  image_picker: ^0.8.6+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
